additions/wordpress/deploy-wordpress-by-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-statefulset
  labels:
    app: wordpress-statefulset
spec:
  ports:
    - port: 80
  selector:
    app: wordpress-statefulset
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress-statefulset
  labels:
    app: wordpress-statefulset
spec:
  selector:
    matchLabels:
      app: wordpress-statefulset
      tier: frontend
  replicas: 1
  serviceName: wordpress-statefulset-frontend
  template:
    metadata:
      labels:
        app: wordpress-statefulset
        tier: frontend
    spec:
      containers:
      - image: wordpress:4.8-apache
        name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
        ports:
        - containerPort: 80
          name: wordpress
  volumeClaimTemplates:
  - metadata:
      name: wordpress-persistent-storage
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
      storageClassName: gp2
